# Etims

./: README.md  pyproject.toml
.github/workflows/: ci.yml
kenya_etims_compliance/: hooks.py  modules.txt
kenya_etims_compliance/custom_methods/: bin.py  bin_stock_entry.py  bom.js  bom.py  customer.js  customer.py  etims_purchase_invoice.py  etims_stock_movement.py  item.js  item.py  purchase_invoice.js  purchase_invoice.py  sales_invoice.js  sales_invoice.py  stock.py  tims_purchase_invoice.py  tims_stock_movement.py
kenya_etims_compliance/kenya_etims_compliance/custom/: account.json  bom.json  bom_item.json  company.json  customer.json  item.json  item_barcode.json  item_group.json  item_tax_template.json  item_tax_template_detail.json  packed_item.json  purchase_invoice.json  purchase_invoice_item.json  purchase_taxes_and_charges.json  purchase_taxes_and_charges_template.json  sales_invoice.json  sales_invoice_item.json  sales_taxes_and_charges.json  sales_taxes_and_charges_template.json  stock_entry.json  stock_entry_detail.json  supplier.json  user_permission.json  warehouse.json
kenya_etims_compliance/kenya_etims_compliance/doctype/error_logging/: error_logging.js  error_logging.json  error_logging.py  test_error_logging.py
kenya_etims_compliance/kenya_etims_compliance/doctype/etims_bom_item/: etims_bom_item.js  etims_bom_item.json  etims_bom_item.py  test_etims_bom_item.py
kenya_etims_compliance/kenya_etims_compliance/doctype/etims_branch_information/: etims_branch_information.js  (+3 more)
kenya_etims_compliance/utils/: etims_response.py  etims_utils.py
(+122 files in other folders)
