[project]
name = "kenya_etims_compliance"
authors = [
    { name = "Upande Ltd", email = "dev@upande.com"}
]
description = "Frappe Etims Compliance App"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.

    #eTIMS integration dependencies
    "segno~=1.6.1",
    "stripe~=2.56.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
